--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: CS2Server
+name: cs2server
 channels:
   - defaults
 dependencies:
@@ -6,7 +6,6 @@ dependencies:
   - _openmp_mutex=5.1=1_gnu
   - bzip2=1.0.8=h7b6447c_0
   - ca-certificates=2023.08.22=h06a4308_0
-  - expat=2.5.0=h6a678d5_0
   - ld_impl_linux-64=2.38=h1181459_1
   - libffi=3.4.4=h6a678d5_0
   - libgcc-ng=11.2.0=h1234567_1
@@ -15,23 +14,32 @@ dependencies:
   - libuuid=1.41.5=h5eee18b_0
   - ncurses=6.4=h6a678d5_0
   - openssl=3.0.11=h7f8727e_2
-  - pip=23.2.1=py312h06a4308_0
-  - python=3.12.0=h996f2a0_0
+  - pip=23.2.1=py310h06a4308_0
+  - python=3.10.13=h955ad1f_0
   - readline=8.2=h5eee18b_0
-  - setuptools=68.0.0=py312h06a4308_0
+  - setuptools=68.0.0=py310h06a4308_0
   - sqlite=3.41.2=h5eee18b_0
   - tk=8.6.12=h1ccaba5_0
   - tzdata=2023c=h04d1e81_0
-  - wheel=0.37.1=pyhd3eb1b0_0
+  - wheel=0.41.2=py310h06a4308_0
   - xz=5.4.2=h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
   - pip:
+      - astroid==3.0.0
       - certifi==2023.7.22
       - charset-normalizer==3.3.0
+      - dill==0.3.7
       - docopt==0.6.2
       - idna==3.4
+      - isort==5.12.0
+      - mccabe==0.7.0
       - pipreqs==0.4.13
+      - platformdirs==3.11.0
+      - pylint==3.0.0
       - requests==2.31.0
+      - tomli==2.0.1
+      - tomlkit==0.12.1
+      - typing-extensions==4.8.0
       - urllib3==2.0.6
       - yarg==0.1.9
-prefix: /home/cs2/miniconda3/envs/CS2Server
+prefix: /home/cs2/miniconda3/envs/cs2server
